k8s/coma/apps/legacy/conduit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conduit
  namespace: conduit
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "matrix.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: conduit
                port:
                  number: 8448
    - host: "artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/.well-known/matrix/"
            backend:
              service:
                name: conduit
                port:
                  number: 8448
  tls:
    - hosts:
        - "matrix.artichoke.cc"
      secretName: tls-secret
